fixes: - projects grid misalignment - irrelevant style classes - scaling images with fontsize - removing strange image styling

--- a/style.css
+++ b/style.css
@@ -43,10 +43,6 @@ body {
 
     margin-top: 20px;
 
-    .row {
-        margin-left: 50px;
-    }
-
     .dpic {
 
         grid-column: span 5;
@@ -54,12 +50,9 @@ body {
 
         img {
             
-            width: 200px;
-            height: 200px;
-            border-radius: 120px;
-
-            overflow-clip-margin: content-box;
-            overflow: clip;
+            width: 12rem;
+            height: 12rem;
+            border-radius: 6em;
 
         }
 
@@ -130,7 +123,7 @@ body {
     height: 100%;
 
     .cvideo {
-        padding: 40px 40px 0 40px
+        padding: 40px 40px 40px 40px;
     }
 
     .videocv {
@@ -156,7 +149,6 @@ body {
         box-sizing: content-box;
 
         .navbuttons {
-            padding: 45px;
             width: 100%;
             /* box-sizing: border-box; */
             text-align: center !important;
@@ -229,12 +221,12 @@ body {
         vertical-align: top;
         border-left: 2px solid #cfcfcf;
         position: relative;
-        padding-left: 5px;
+        padding-left: 7px;
         /* width: 100px; */
         img {
             display: block;
-            width: 80px;
-            height: 80px;
+            width: 5rem;
+            height: 5rem;
             /* height: auto; */
             object-fit: contain;
         }
@@ -254,19 +246,6 @@ hr {
     margin: 20px 0px 20px 0px;
     border: 0;
 }
-
-/* .ico {
-    grid-column: span 1;
-    vertical-align: top;
-    border-left: 2px solid #cfcfcf;
-    position: relative;
-}
-.ico img {
-    border-radius: 5px;
-    width: 100%;
-    max-width: 80px;
-    margin-left: 10px;
-} */
 .desc {
     grid-column: span 10;
     vertical-align: top;
@@ -292,51 +271,11 @@ hr {
     padding-right: 5px;
     color: #bbb;
 }
-.hassets {
-    position: relative;
-}
-@media (max-width: 991px) {
-    .hassets {
-        display: none;
-    }
-}
-.hasset {
-    position: absolute;
-    margin: 0;
-    padding: 0;
-}
 .ctitle {
     font-size: 36px;
     margin-bottom: 20px;
     margin-top: 40px;
-}
-#featured-talks .row {
-    grid-column-gap: 10px;
-    grid-row-gap: 10px;
-    padding-bottom: 30px;
-}
-.card {
-    grid-column: span 3;
-    vertical-align: top;
-    background-color: #eee;
-    border: 1px solid #ddd;
-    border-radius: 3px;
-    padding: 5px;
-    background-color: white;
-    padding-bottom: 10px;
-}
-@media (max-width: 991px) {
-    .card {
-        grid-column: span 6;
-    }
-    #featured-talks .row {
-        grid-column-gap: 5px;
-        grid-row-gap: 5px;
-    }
-}
-.card img {
-    border-radius: 5px;
-    width: 100%;
+    padding-left: 10px;
 }
 .cdesc {
     height: 30px;
@@ -349,10 +288,6 @@ hr {
         font-size: 14px;
         padding-bottom: 10px;
     }
-}
-#pet-projects .row {
-    grid-column-gap: 10px;
-    grid-row-gap: 10px;
 }
 
 .cprojects {
@@ -397,6 +332,7 @@ a.fill-div {
 }
 
 .showcase {
+    grid-template-columns: auto;
     .pico {
         position: relative;
         width: 100%;
@@ -410,7 +346,6 @@ a.fill-div {
             object-fit: cover;
             object-position: 0% 10%;
         }
-        /* height: 5rem; */
     }
 }
 
@@ -419,46 +354,7 @@ a.fill-div {
     padding-bottom: 10px;
     border-bottom: 1px solid #eee;
 }
-/* .pico {
-    float: left;
-    margin-right: 10px;
-} */
 
 .pend {
     clear: both;
-}
-
-.pub {
-    font-size: 14px;
-    border-left: 4px solid #aaa;
-    padding: 2px 0px 2px 10px;
-    margin-bottom: 10px;
-}
-.pub-title {
-    display: inline;
-    color: #333;
-}
-.pub-venue {
-    display: inline;
-    color: #090;
-}
-.pub-authors {
-    display: block;
-    color: #900;
-}
-.tul {
-    text-align: center;
-    padding: 0;
-}
-.til {
-    display: inline-block;
-    padding: 3px 15px 3px 15px;
-    margin-bottom: 5px;
-}
-.tilb {
-    border-right: 1px solid #ccc;
-}
-.nodot {
-    list-style-type: none;
-    padding-left: 0;
 }
